--- a/Poetry/src/main/resources/application.properties
+++ b/Poetry/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+spring.application.name=MRHamsafar
+
+#MongoDB specifications
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=C:/data/db
+
 #spring-starter-batch exception handling
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url: jdbc:h2:mem:localhost;DB_CLOSE_ON_EXIT=FALSE
